--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,11 @@ android {
         release {
         }
     }
-    compileSdkVersion 21
-    buildToolsVersion '27.0.3'
+    compileSdkVersion 31
     defaultConfig {
         applicationId "souch.smp"
         minSdkVersion 8
-        targetSdkVersion 11
+        targetSdkVersion 31
         versionCode 17
         versionName '1.4.1'
     }
@@ -29,6 +28,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile 'com.jayway.android.robotium:robotium-solo:5.2.1'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestImplementation 'com.jayway.android.robotium:robotium-solo:5.2.1'
+    implementation 'com.android.support:support-v4:23.+'
 }
