--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     implementation 'androidx.core:core:1.7.0'
     implementation 'androidx.media:media:1.4.3'
     //implementation 'androidx.preference:preference:1.1.0'
+    implementation 'com.github.AdrienPoupa:jaudiotagger:2.2.3'
 }
