--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,7 @@ dependencies {
     implementation 'androidx.media:media:1.4.3'
     //implementation 'androidx.preference:preference:1.1.0'
     implementation 'com.github.AdrienPoupa:jaudiotagger:2.2.3'
+    def room_version = "2.4.1"
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
 }
