--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,13 +18,22 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
         debug {
             debuggable true
         }
     }
+    flavorDimensions "version"
     productFlavors {
+        free {
+            resValue "string", "app_name", "SicMu Player"
+        }
+        pro {
+            resValue "string", "app_name", "SicMu Player Pro"
+            applicationIdSuffix ".pro"
+            versionNameSuffix "-pro"
+        }
+
     }
 }
 
