--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -100,7 +100,7 @@
         <activity
             android:name=".Settings"
             android:label="@string/settings_title"
-            android:theme="@style/PreferenceTheme"
+            android:theme="@style/Theme.AppTheme"
             android:parentActivityName=".Main" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
