Add Flavor class

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,12 +25,11 @@ android {
     }
     flavorDimensions "version"
     productFlavors {
+        // for freeware and fdroid version
         free {
             resValue "string", "app_name", "SicMu Player"
         }
-        fdroid {
-            resValue "string", "app_name", "SicMu Player"
-        }
+        // for pro version
         pro {
             resValue "string", "app_name", "SicMu Player Pro"
             applicationIdSuffix ".pro"
