--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,9 +37,9 @@ android {
         }
 
     }
-    lintOptions {
-        baseline file("lint-baseline.xml")
-    }
+//    lintOptions {
+//        baseline file("lint-baseline.xml")
+//    }
 }
 
 dependencies {
