--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
+    namespace "souch.smp"
     signingConfigs {
         release {
         }
@@ -47,6 +48,7 @@ dependencies {
     //androidTestImplementation 'com.jayway.android.robotium:robotium-solo:5.2.1'
     testImplementation 'junit:junit:4.12'
     testImplementation 'androidx.test:core:1.4.0'
+    testImplementation 'com.google.android:android-test:4.1.1.4'
     implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'androidx.core:core:1.7.0'
     implementation 'androidx.media:media:1.4.3'
