--- a/gradle.properties
+++ b/gradle.properties
@@ -13,3 +13,6 @@
 #Tue Jan 11 22:25:02 CET 2022
 android.useAndroidX=true
 android.enableJetifier=true
+android.defaults.buildfeatures.buildconfig=true
+android.nonTransitiveRClass=false
+android.nonFinalResIds=false
