Fix GitLab CI: Update JDK 11 -> 17

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@
 # Read more about this script on this blog post https://about.gitlab.com/2018/10/24/setting-up-gitlab-ci-for-android-projects/, by Jason Lenny
 # If you are interested in using Android with FastLane for publishing take a look at the Android-Fastlane template.
 
-image: openjdk:11-jdk
+image: openjdk:17-jdk
 
 variables:
 
@@ -27,8 +27,8 @@ variables:
 
 # Packages installation before running script
 before_script:
-  - apt-get --quiet update --yes
-  - apt-get --quiet install --yes wget tar unzip lib32stdc++6 lib32z1
+  - apt --quiet update --yes
+  - apt --quiet install --yes wget tar unzip lib32stdc++6 lib32z1
 
   # Setup path as ANDROID_HOME for moving/exporting the downloaded sdk into it
   - export ANDROID_HOME="${PWD}/android-home"
