--- a/gradle.properties
+++ b/gradle.properties
@@ -12,7 +12,7 @@
 # org.gradle.parallel=true
 #Tue Jan 11 22:25:02 CET 2022
 android.useAndroidX=true
-android.enableJetifier=true
+android.enableJetifier=false
 android.defaults.buildfeatures.buildconfig=true
-android.nonTransitiveRClass=false
+android.nonTransitiveRClass=true
 android.nonFinalResIds=false
