--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,10 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.7.1'
     implementation 'androidx.core:core:1.17.0'
     implementation 'androidx.media:media:1.7.1'
+    implementation "androidx.media3:media3-exoplayer:1.8.0"
+    implementation "androidx.media3:media3-exoplayer-hls:1.8.0"
+    implementation "androidx.media3:media3-session:1.8.0"
+    implementation "androidx.media3:media3-datasource:1.8.0"
     //implementation 'androidx.preference:preference:1.1.0'
     implementation 'com.github.AdrienPoupa:jaudiotagger:2.2.3'
     def room_version = "2.8.4"
