--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    namespace "xyz.mordorx.sicmu"
+    namespace = "xyz.mordorx.sicmu"
     signingConfigs {
         release {
         }
@@ -12,14 +12,14 @@ android {
         minSdkVersion 24 // Android 7.0
         //noinspection ExpiredTargetSdkVersion
         targetSdkVersion 28
-        versionCode 32
-        versionName '2.4.0'
+        versionCode 34
+        versionName '2.4.1'
         vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
             minifyEnabled true
-            shrinkResources true
+            shrinkResources = true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
         debug {
@@ -38,7 +38,7 @@ android {
         targetCompatibility JavaVersion.VERSION_11
     }
     buildFeatures {
-        buildConfig true
+        buildConfig = true
     }
 //    lintOptions {
 //        baseline file("lint-baseline.xml")
