--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     implementation "androidx.media3:media3-datasource:1.8.0"
     //implementation 'androidx.preference:preference:1.1.0'
     implementation 'com.github.AdrienPoupa:jaudiotagger:2.2.3'
+    implementation 'com.github.woheller69:FreeDroidWarn:V1.6'
     def room_version = "2.8.4"
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
