--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,8 @@
-apply plugin: 'com.android.application'
+plugins {
+    id 'com.android.application'
+    id 'org.jetbrains.kotlin.android'
+    id 'org.jetbrains.kotlin.plugin.compose'
+}
 
 android {
     namespace = "xyz.mordorx.sicmu"
@@ -39,6 +43,10 @@ android {
     }
     buildFeatures {
         buildConfig = true
+        compose true
+    }
+    kotlinOptions {
+        jvmTarget = '11'
     }
 //    lintOptions {
 //        baseline file("lint-baseline.xml")
@@ -47,6 +55,16 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'androidx.core:core-ktx:1.17.0'
+    implementation 'androidx.compose.runtime:runtime:1.10.0'
+    implementation 'androidx.compose.animation:animation-core:1.10.0'
+    implementation 'androidx.compose.foundation:foundation:1.10.0'
+    implementation 'androidx.compose.ui:ui:1.10.0'
+    implementation 'androidx.compose.ui:ui-graphics:1.10.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.10.0'
+    debugImplementation 'androidx.compose.ui:ui-tooling:1.10.0'
+    implementation 'androidx.compose.ui:ui-tooling-preview:1.10.0'
+    implementation 'androidx.compose.material3:material3:1.4.0'
     //androidTestImplementation 'com.jayway.android.robotium:robotium-solo:5.2.1'
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'androidx.test:core:1.7.0'
@@ -64,4 +82,21 @@ dependencies {
     def room_version = "2.8.4"
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
+
+    implementation(libs.androidx.core.ktx)
+    implementation(libs.androidx.lifecycle.runtime.ktx)
+    implementation(libs.androidx.activity.compose)
+    implementation(platform(libs.androidx.compose.bom))
+    implementation(libs.androidx.compose.ui)
+    implementation(libs.androidx.compose.ui.graphics)
+    implementation(libs.androidx.compose.ui.tooling.preview)
+    implementation(libs.androidx.compose.material3)
+    implementation(libs.androidx.compose.ui.unit)
+    testImplementation(libs.junit)
+    androidTestImplementation(libs.androidx.junit)
+    androidTestImplementation(libs.androidx.espresso.core)
+    androidTestImplementation(platform(libs.androidx.compose.bom))
+    androidTestImplementation(libs.androidx.compose.ui.test.junit4)
+    debugImplementation(libs.androidx.compose.ui.tooling)
+    debugImplementation(libs.androidx.compose.ui.test.manifest)
 }
