--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,7 @@ dependencies {
     implementation 'androidx.compose.ui:ui:1.10.0'
     implementation 'androidx.compose.ui:ui-graphics:1.10.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.10.0'
+    implementation libs.material
     debugImplementation 'androidx.compose.ui:ui-tooling:1.10.0'
     implementation 'androidx.compose.ui:ui-tooling-preview:1.10.0'
     implementation 'androidx.compose.material3:material3:1.4.0'
