--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,15 +56,14 @@ dependencies {
 
     // Media
     implementation 'androidx.media:media:1.7.1'
-    implementation "androidx.media3:media3-exoplayer:1.8.0"
-    implementation "androidx.media3:media3-exoplayer-hls:1.8.0"
-    implementation "androidx.media3:media3-session:1.8.0"
-    implementation "androidx.media3:media3-datasource:1.8.0"
+    implementation "androidx.media3:media3-exoplayer:1.9.0"
+    implementation "androidx.media3:media3-exoplayer-hls:1.9.0"
+    implementation "androidx.media3:media3-session:1.9.0"
+    implementation "androidx.media3:media3-datasource:1.9.0"
 
     // Database
-    def room_version = "2.8.4"
-    implementation "androidx.room:room-runtime:$room_version"
-    annotationProcessor "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-runtime:2.8.4"
+    annotationProcessor "androidx.room:room-compiler:2.8.4"
 
     // Misc.
     implementation 'com.google.android.material:material:1.13.0'
